test/core/errors/indexed_offsets_error/zs/unary_operator_in_array_expression_error.zs
package unary_operator_in_array_expression_error;

struct UnaryOperatorInArrayExpressionError
{
    uint32 offsets[];
offsets[~@index]:
    string fields[];
};
